typo in documentation

--- a/docu/index.html
+++ b/docu/index.html
@@ -38,7 +38,7 @@ is a small JavaScript library that implements classes and private/protected clas
 JavaScript.</p>
 <p>Classier is partly inspired by, and uses the same API/syntax as, the excellent JavaScript library <a href="http://classy.pocoo.org/">Classy</a> (but does not share its codebase).</p>
 
-<p>Classier also borrows large parts of its documentation from Classy. The biggest difference between the two libraries is that you can use private and protected class members with Classier. Also class constructors get proper name in Classier, thus allowing for easier debugging -   most web browsers will console.log the name of a class when you look at an instance of it.</p>
+<p>Classier also borrows large parts of its documentation from Classy. The biggest difference between the two libraries is that you can use private and protected class members with Classier. Also class constructors get proper names in Classier, thus allowing for easier debugging -   most web browsers will console.log the name of a class when you look at an instance of it.</p>
 
 <p>Another (small, but sometimes important) difference between Classy and Classier is that Classier can use arrays and objects as property values in a class declaration and they will be cloned (rather than referenced) when you create a class instance.</p>
 
